# tmge

./: Makefile  README.md  pyproject.toml  requirements.txt
src/tilematch_env/: __init__.py  cli.py  player.py
test/unit/: test_tilematch_env.py
